# cpp_snippets

./: .gitignore  README.md  dev.sh  make_plugin_panel.sh  make_ros_package.sh  template.sh  test.csv  test.repos  test.tsv
bag_time_manager_rviz_plugin/: README.md  package.xml
bag_time_manager_rviz_plugin/src/: bag_time_manager_panel.cpp  bag_time_manager_panel.hpp
boost_reference/boost_reference/: CMakeLists.txt  package.xml
computation/computation/: CMakeLists.txt  package.xml
cpp_system/: CMakeLists.txt
cv_practice/cv_practice/: CMakeLists.txt  package.xml
cv_practice/cv_practice/src/cv_practice/: cv_practice.cpp
cv_practice/cv_practice/test/: test_cv_practice.cpp
delay_estimator/: CMakeLists.txt  package.xml
delay_estimator/config/: delay_estimator.yaml
delay_estimator/delay_estimator/: CMakeLists.txt  package.xml
delay_estimator/delay_estimator/include/delay_estimator/: data_processor.hpp
delay_estimator/delay_estimator/src/delay_estimator/: delay_estimator.cpp
delay_estimator/delay_estimator/test/: test_delay_estimator.cpp
delay_estimator/include/delay_estimator/: data_processor.hpp  debugger.hpp  delay_estimator.hpp
delay_estimator/launch/: delay_estimator.launch.xml  steer_delay_estimator.launch.xml  test_tool.launch.py
delay_estimator/src/delay_estimator/: delay_estimator.cpp
delay_estimator/test/: test_delay_estimator.cpp  test_generic_type.cpp  test_sub.cpp
delay_estimator_rviz_plugin/: CMakeLists.txt  README.md  package.xml
delay_estimator_rviz_plugin/plugins/: plugin_description.xml
delay_estimator_rviz_plugin/src/: delay_estimator_panel.cpp  delay_estimator_panel.hpp
eclips_cpp/: Untitled Diagram.drawio
eclips_cpp/CommunicatorTest/: CMakeLists.txt  CommunicatorTest.cpp  reciever.cpp  sender.cpp  udp.h
eclips_cpp/Singleton/: singleton.cpp  singleton.h
eclips_cpp/static_test/: main.cpp  main.h  st1.cpp
eigen/test/: CMakeLists.txt
gtest/: multi_thread_practice.cpp
gtest/gtest_practice/: CMakeLists.txt  package.xml
hueristic_search/: CMakeLists.txt
interp/: readme.md
interp/interp/: CMakeLists.txt  package.xml  readme.md
interp/interp/config/: interpolation.rviz
interp/interp/include/interp/: interp.hpp
interp/interp/src/interp/: interp.cpp
interp/interp/test/: test_interp.cpp  test_path_interp.cpp
interpolation/: CMakeLists.txt
lowpass/lowpass/: CMakeLists.txt  package.xml
lowpass/lowpass/src/lowpass/: lowpass.cpp
lowpass/lowpass/test/: test_lowpass.cpp
math/argsort/: argsort.cpp
math/boolean/: CMakeLists.txt
math/convolution/: CMakeLists.txt
math/correlate/: CMakeLists.txt
math/correlate/src/: 1d_convoluation.cpp  direct.cpp  f.cpp  lowpass.cpp  sequentialStat.cpp  statistic.cpp
math/eigen/: eigen.sh
math/eigen/test/: CMakeLists.txt
math/eigen/test/src/: calc.cpp  e.cpp  integrate.cpp  kalman_filter.cpp  matrix_operation.cpp  quaternion.cpp
math/interpolation/: CMakeLists.txt
math/interpolation/config/: map.csv  map2.csv
math/interpolation/include/: csv_loader.h  interpolate.h
math/interpolation/src/: c.cpp  csv_loader.cpp  d.cpp  interp.cpp  linear_interpolation.cpp  vvprinte.cpp
math/msgs/: CMakeLists.txt  Trajectory.h  test_msgs.cpp
math/smart_pointer/: CMakeLists.txt
math/smart_pointer/src/: a_rawpointer.cpp  b_auto_pointer.cpp  c_unique_pointer.cpp  friend.cpp
math/velocity_planning/: CMakeLists.txt
math/velocity_planning/src/: a.cpp  preactive_brake.cpp  velocity_test.cpp
multi_polygon_practice/multi_polygon_practice/: CMakeLists.txt  package.xml
multi_thread_practice/multi_thread_practice/: CMakeLists.txt  package.xml
python_snippets/: error.py  test.py  test2.py  test_csv.py
ros/src/example/: CMakeLists.txt  package.xml
ros/src/example/config/: SETTING.rviz  example_param.yaml
ros/src/example/include/example/: example.h
ros/src/example/src/: example.cpp  motion_model.cpp
ros/src/kalman_filter/: CMakeLists.txt  package.xml
ros/src/kalman_filter/config/: SETTING.rviz
ros/src/kalman_filter/include/kalman_filter/: kalman_filter.h
ros/src/kalman_filter/src/: kalman_filter.cpp
ros/src/vehicle/: CMakeLists.txt  package.xml
ros/src/vehicle/include/vehicle/: vehicle.h
ros/src/vehicle/src/: vehicle.cpp
rviz_marker/rviz_marker/: CMakeLists.txt  package.xml
rviz_marker/rviz_marker/include/rviz_marker/: rviz_marker.hpp
rviz_marker/rviz_marker/src/rviz_marker/: rviz_marker.cpp
rviz_marker/rviz_marker/test/: test_rviz_marker.cpp
smart_pointer/src/: b_auto_pointer.cpp
test_panel/test_panel/: CMakeLists.txt  package.xml
test_panel/test_panel/include/test_panel/: test_panel.hpp
test_panel/test_panel/plugins/: plugin_description.xml
test_panel/test_panel/rviz/: test.rviz
test_panel/test_panel/src/test_panel/: test_panel.cpp
test_panel/test_panel/test/: test_test_panel.cpp
unreal/: TestProject.Build.cs  TestProject.cpp  TestProjectGameMode.cpp  TestProjectGameMode.h  TestProjectHud.cpp  TestProjectHud.h  TestProjectPawn.cpp  TestProjectPawn.h  TestProjectWheelFront.cpp  TestProjectWheelFront.h  TestProjectWheelRear.cpp  TestProjectWheelRear.h
unreal/config/: control_config.h  costmap_config.h  vehicle_config.h  waypoint_config.h
unreal/control/: EmergencyStop.cpp  EmergencyStop.h  MoveBase.cpp  MoveBase.h
unreal/define/: ackermann_define.h  core_define.h  ctrl_define.h  evaluate_define.h  geom_define.h  math_define.h  nav_define.h  sensor_define.h  tf_define.h  trajectory_define.h  unreal_define.h  waypoint_define.h
unreal/design/: SingletonPattern.h  StatePattern.h  StrategyPattern.h  TemplateMethod.h
unreal/manager/: SafetyManager.cpp  SafetyManager.h
unreal/mapdata/: LanePublisher.cpp  LanePublisher.h  SplineLanePublisher.cpp  SplineLanePublisher.h
unreal/mission/: Following.cpp  Following.h  Mission.cpp  Mission.h
window_recorder/window_recorder/: CMakeLists.txt  package.xml
window_recorder/window_recorder/include/window_recorder/: window_recorder.hpp
window_recorder/window_recorder/src/window_recorder/: window_recorder.cpp
window_recorder/window_recorder/test/: test_window_recorder.cpp
(+89 files in other folders)
