
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
# Contest hueristic_search src
add_executable(src_a src/geometric_search.cpp)
add_executable(src_b src/b.cpp)
add_executable(src_c src/c.cpp)
add_executable(src_d src/d.cpp)
add_executable(src_e src/e.cpp)
add_executable(src_f src/f.cpp)
