
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)

# Contest interpolation src
add_executable(src_a src/linear_interpolation.cpp)
add_executable(src_b src/b.cpp)
add_executable(src_c src/c.cpp)
add_executable(src_d src/d.cpp)
add_executable(src_e src/e.cpp)
add_executable(src_f src/f.cpp)
