<?xml version="1.0"?>
<package format="2">
  <name>interp</name>
  <version>0.1.0</version>
  <maintainer email="tanaka3@gmail.com">tanaka3</maintainer>
  <description>The gtest package</description>
  <license>Apache License 2.0</license>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>interpolation</depend>
  <depend>tier4_autoware_utils</depend>
  <depend>tier4_planning_rviz_plugin</depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
