
cmake_minimum_required(VERSION 3.10)
set(CMAKE_CXX_STANDARD 17)
# Contest math/velocity_planning src]
include_directories(/home/tanaka-car/Documents/cpp_snippet/math/msgs)
add_executable(src_a src/ideapad.cpp)
add_executable(src_b src/velocity_test.cpp)
add_executable(src_c src/c.cpp)
add_executable(src_d src/d.cpp)
add_executable(src_e src/e.cpp)
add_executable(src_f src/f.cpp)
