<?xml version="1.0"?>
<package format="2">
  <name>test_panel</name>
  <version>0.1.0</version>
  <maintainer email="tanaka3@gmail.com">tanaka3</maintainer>
  <description>The gtest package</description>
  <license>Apache License 2.0</license>
  <depend>rclcpp</depend>
  <depend>rviz_common</depend>
  <depend>rviz_rendering</depend>
  <depend>libqt5-core</depend>
  <depend>libqt5-gui</depend>
  <depend>libqt5-widgets</depend>
  <depend>qtbase5-dev</depend>
  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <test_depend>ament_cmake_gtest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <export>
    <build_type>ament_cmake</build_type>
    <rviz plugin="/plugins/plugin_description.xml"/>
  </export>
</package>
